exports[`App snapshot 1`] = `
<div
  className="page">
  <div
    className="interactions">
    <form
      onSubmit={[Function]}>
      <input
        onChange={[Function]}
        type="text"
        value="redux" />
      <button
        type="submit">
        Search
      </button>
    </form>
  </div>
  <div
    className="table">
    <div
      className="table-header">
      <span
        style={
          Object {
            "width": "40%",
          }
        }>
        <button
          className="button-inline"
          onClick={[Function]}
          type="button">
          Title
           
          <span />
        </button>
      </span>
      <span
        style={
          Object {
            "width": "30%",
          }
        }>
        <button
          className="button-inline"
          onClick={[Function]}
          type="button">
          Author
           
          <span />
        </button>
      </span>
      <span
        style={
          Object {
            "width": "10%",
          }
        }>
        <button
          className="button-inline"
          onClick={[Function]}
          type="button">
          Comments
           
          <span />
        </button>
      </span>
      <span
        style={
          Object {
            "width": "10%",
          }
        }>
        <button
          className="button-inline"
          onClick={[Function]}
          type="button">
          Points
           
          <span />
        </button>
      </span>
      <span
        style={
          Object {
            "width": "10%",
          }
        }>
        Archive
      </span>
    </div>
  </div>
  <div
    className="interactions">
    <div>
      <i
        className="fa fa-refresh fa-spin fa-2x fa-fw" />
    </div>
  </div>
</div>
`;

exports[`Button snapshots 1`] = `
<button
  className=""
  onClick={[Function]}
  type="button">
  More
</button>
`;

exports[`Search snapshots 1`] = `
<form
  onSubmit={[Function]}>
  <input
    onChange={[Function]}
    type="text"
    value="search" />
  <button
    type="submit">
    Search
  </button>
</form>
`;

exports[`Sort snapshots 1`] = `
<button
  className="button-inline button-active"
  onClick={[Function]}
  type="button">
   
  <i
    className="fa fa-caret-up" />
</button>
`;

exports[`Table snapshots 1`] = `
<div
  className="table">
  <div
    className="table-header">
    <span
      style={
        Object {
          "width": "40%",
        }
      }>
      <button
        className="button-inline"
        onClick={[Function]}
        type="button">
        Title
         
        <span />
      </button>
    </span>
    <span
      style={
        Object {
          "width": "30%",
        }
      }>
      <button
        className="button-inline"
        onClick={[Function]}
        type="button">
        Author
         
        <span />
      </button>
    </span>
    <span
      style={
        Object {
          "width": "10%",
        }
      }>
      <button
        className="button-inline"
        onClick={[Function]}
        type="button">
        Comments
         
        <span />
      </button>
    </span>
    <span
      style={
        Object {
          "width": "10%",
        }
      }>
      <button
        className="button-inline"
        onClick={[Function]}
        type="button">
        Points
         
        <span />
      </button>
    </span>
    <span
      style={
        Object {
          "width": "10%",
        }
      }>
      Archive
    </span>
  </div>
  <div
    className="table-row">
    <span
      style={
        Object {
          "width": "40%",
        }
      }>
      <a
        href={undefined}>
        1
      </a>
    </span>
    <span
      style={
        Object {
          "width": "30%",
        }
      }>
      1
    </span>
    <span
      style={
        Object {
          "width": "10%",
        }
      }>
      1
    </span>
    <span
      style={
        Object {
          "width": "10%",
        }
      }>
      2
    </span>
    <span
      style={
        Object {
          "width": "10%",
        }
      }>
      <button
        className="button-inline"
        onClick={[Function]}
        type="button">
        Dismiss
      </button>
    </span>
  </div>
  <div
    className="table-row">
    <span
      style={
        Object {
          "width": "40%",
        }
      }>
      <a
        href={undefined}>
        2
      </a>
    </span>
    <span
      style={
        Object {
          "width": "30%",
        }
      }>
      2
    </span>
    <span
      style={
        Object {
          "width": "10%",
        }
      }>
      1
    </span>
    <span
      style={
        Object {
          "width": "10%",
        }
      }>
      2
    </span>
    <span
      style={
        Object {
          "width": "10%",
        }
      }>
      <button
        className="button-inline"
        onClick={[Function]}
        type="button">
        Dismiss
      </button>
    </span>
  </div>
</div>
`;
